<resources>
    <string name="tesseract">Tesseract</string>
    <string name="app_name">Developer Wallet</string>
    <string name="title_home">Home</string>
    <string name="title_key_settings">Private Key</string>
    <string name="title_test_settings">Test Protocol</string>
    <string name="signature">Signature</string>
    <string name="label_invalidator">Request that produces error:</string>
    <string name="caption_save">Save</string>
    <string name="caption_revert">Revert</string>
    <string name="caption_sign">Sign</string>
    <string name="caption_cancel">Cancel</string>
    <string name="label_error_explanation"><i>Since transaction matches invalidator, we\'ll invalidate it and reply with the following error message:</i></string>
    <string name="label_mnemonic">12 words secret key phrase:</string>
    <string name="mnemonic">Mnemonic</string>
    <string name="private_key_settings_label">Private Key settings:</string>
    <string name="test_protocol_settings_label">Test Protocol settings:</string>
</resources>